Agregue animaciones y transiciones al index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="../img/icono1.ico">
+    <title>COFFEE 503GIT</title>
 </head>
 
     <body class="bodyy">
@@ -39,8 +41,13 @@
           El Salvador produce solamente café Arábica. Las principales variedades cultivadas son Bourbon- 68% del área total de cafetale y Pacas, la variedad salvadoreña proveniente de una mutación natural del Bourbon - 29% de los cafetales-. Además, también se produce algunas cantidades de Pacamara (híbrido salvadoreño resultante del cruce entre Pacas y Maragogipe, con excelentes propiedades de taza) y de otras variedades, en mucha menor cuantía, como Caturra, Catuai y Tekisic (café de origen, también salvadoreño con grandes resultados en taza). Juntas representan el 3% restante de cafetales activos en el país.
          </p>
           
-          <div>
-              <img class="fotop" src="./img/Destacada-Cafe-SV.jpg" alt="">
+          <div class="fotop">
+              <ul>
+                <li><img src="./img/coffeeeeee2.webp" alt=""></li>
+                <li><img src="./img/coffeeeeee3.jpg" alt=""></li>
+                <li><img src="./img/coffeeeeee4.jpg" alt=""></li>
+                <li><img src="./img/coffeeeeee5.jpg" alt=""></li>
+               </ul>
           </div>
           
 </body>
